--- a/Autores.html
+++ b/Autores.html
@@ -231,7 +231,7 @@
                 <div class="col-lg-12">
                     <div class="Encabezado col-lg-12 ">
                         <h2>
-                            ¿QUIÉNES SOMOS?
+                            ¿Quiénes Somos?
                         </h2>
                     </div>
                     <p>
@@ -249,10 +249,40 @@
                         <center>
                             <iframe allowfullscreen="" frameborder="0" height="450" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31815.15533680047!2d-74.09965998232447!3d4.6129125355254885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f98e1003987bd%3A0xc1c38a35fe03bf87!2sUniversidad+Nacional+Abierta+y+a+Distancia+-+Sede+Jos%C3%A9+Celestino+Mutis!5e0!3m2!1ses-419!2sco!4v1540158388515"
                                 style="border:0" width="600">
-                            </iframe>
-                        </center>
+                            </iframe></center>
                     </div>
-                </div>
+                      <div class="Encabezado col-lg-12">
+                        <h2>
+                            Bibliografía
+                        </h2></div>
+                      </div>
+
+                     <div class="container">
+                       <p>
+                                    <ul>
+                                        <li>
+                                             Deusto Formación. (2017). GitHub. Recuperado de: https://www.deustoformacion.com/blog/programacion-diseno-web/que-es-para-que-sirve-github
+                                        </li>
+                                        <li>
+                                            MDN Web docs. (2017). Cómo funciona CSS. Recuperado de: https://developer.mozilla.org/es/docs/Learn/CSS/Introduction_to_CSS/Como_funciona_CSS
+                                        </li>
+                                        <li>
+                                            MDN Web docs. (2017). ¿Cómo se utiliza Github pages?. Recuperado de: https://developer.mozilla.org/es/docs/Learn/Using_Github_pages
+                                        </li>
+                                        <li>
+                                            Hipertextual. (2013). Entendiendo HTML5: guía para principiantes. Recuperado de: https://hipertextual.com/archivo/2013/05/entendiendo-html5-guia-para-principiantes/
+                                        </li>
+                                        <li>
+                                            Wikipedia. (2018). Git. Recuperado de:  https://es.wikipedia.org/wiki/Git
+                                        </li>
+                                        <li>
+                                            Wikipedia. (2018). GitHUb. Recuperado de: https://es.wikipedia.org/wiki/GitHub
+                                        </li>
+                                    </ul>
+                                </p>
+                     </div>
+
+                     
             </div>
         </div>
     </div>
