--- a/HTML5.html
+++ b/HTML5.html
@@ -7,12 +7,18 @@
     <script src="Js/bootstrap.js" type="text/javascript"></script>
     <script src="Js/bootstrap.min.js" type="text/javascript"></script>
     <script src="Js/FuncionesOVI.js" type="text/javascript"></script>
+    <script src="Js/bootstrap.bundle.js" type="text/javascript"></script>
+            <script> 
+            $(function (){
+            $("[data-toggle='tooltip']").tooltip();
+             } );
+            </script>
     <link href="Css/style.css" rel="stylesheet" type="text/css"></link>
     <link href="Css/styleMenu.css" rel="stylesheet" type="text/css"></link>
     <link href="Css/bootstrap.css" rel="stylesheet" type="text/css"></link>
     <link href="Css/bootstrap.min.css" rel="stylesheet" type="text/css"></link>
     <link href="Css/font-awesome.css" rel="stylesheet" type="text/css"></link>
-    <title> Inicio</title>
+    <title>Lecturas</title>
     <link href="img/logo.ico" rel="icon"></link>
     </meta>
 </head>
@@ -128,12 +134,12 @@
                 </div>
                 <div class="col-lg-12 row">
                     <div class="col-lg-3 contenedorIMG">
-                        <img alt="Responsive image" data-target="#ModalHTML" data-toggle="modal" src="Img/HTMLogo.png">
+                        <img alt="Responsive image" data-target="#ModalHTML" src="Img/HTMLogo.png" data-toggle="tooltip" data-placement="Top" title="Kisspng.(2017).Logotipo HTML5. Recuperado de:https://www.kisspng.com/">
                         </img>
                     </div>
                     <div class="col-lg-9">
                         <div class="col-lg-12">
-                            <p>
+                            <p data-toggle="tooltip" data-placement="left" title="Hipertextual. (2013). Entendiendo HTML5: guía para principiantes. Recuperado de: https://hipertextual.com/archivo/2013/05/entendiendo-html5-guia-para-principiantes/">
                                 HTML5 significa HyperText Markup Language, versión 5, ¿qué es esto? Un lenguaje en el que se escriben las páginas Web, que
                                 permite hacer enlaces (hipertexto) y que es leído por los navegadores para poder mostrar
                                 la información en la pantalla de tu ordenador de una forma correcta. Por ejemplo, el lenguaje
@@ -253,7 +259,7 @@
                 </button>
             </div>
             <div class="modal-body">
-            	            <p>
+            	            <p data-toggle="tooltip" data-placement="right" title="Hipertextual. (2013). Entendiendo HTML5: guía para principiantes. Recuperado de: https://hipertextual.com/archivo/2013/05/entendiendo-html5-guia-para-principiantes/">
                                 ¿Qué es el HTML5 y para qué sirve? Es la última versión del lenguaje en el que se escriben las páginas Webs y los blogs de
                                 Blogger, un lenguaje que sólo con capaces de leer los últimos navegadores, ya que los que
                                 son más anticuados hay algunas etiquetas que no son capaces de interpretar.
@@ -262,7 +268,7 @@
                             	HTML5 que es la última fase de desarrollo comparte muchas características con HTML4, pero tiene algunas cosas nuevas de gran importancia:
                             </p>
                             <center>
-                                <img alt="Responsive image" class="img-fluid" src="Img/tag-html.png" />
+                                <img alt="Responsive image" class="img-fluid" src="Img/tag-html.png" data-toggle="tooltip" data-placement="Top" title="AyudaWP.(2014).Tag html. Recuperado de:https://ayudawp.com/tags-html-seo/"/>
                             </center>
                             <p>
                                 <b>1.</b> HTML5 es un lenguaje más simple. Eso es bueno para los diseñadores y también para las arañas que tienen que rastrear las
@@ -303,7 +309,7 @@
                                 una conexión de calidad, como por ejemplo el momento en el que un autobús entra en un túnel.
                             </p>
                             <center>
-                                <img alt="Responsive image" class="img-fluid" src="Img/HTMLInfo1.png" />
+                                <img alt="Responsive image" class="img-fluid" src="Img/HTMLInfo1.png" data-toggle="tooltip" data-placement="Top" title="IngenioVirtual.(2017).HTML5. Recuperado de: https://www.ingeniovirtual.com/ventajas-y-posibilidades-del-desarrollo-web-con-html5/"/>
                             </center>
                             
             </div>
