--- a/CSS3.html
+++ b/CSS3.html
@@ -148,7 +148,8 @@
                                </button>    
                            </div>
                            <div class="col-lg-12 contenedorVideosLecturas">
-                                <iframe style="width:100%;" height="722" src="https://www.youtube.com/embed/gB2kwdaSUtg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                <iframe style="width:100%;" height="722" src="https://www.youtube.com/embed/gB2kwdaSUtg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen data-toggle="tooltip" data-placement="right" title="DesarrolladorSoft
+                                .(2017).CSS3. Recuperado de: https://youtu.be/gB2kwdaSUtg"></iframe>
                             </div>
                         </div>
                     </div>
