--- a/GIT.html
+++ b/GIT.html
@@ -151,7 +151,8 @@
                                 
                             </div>
                             <div class="col-lg-12 contenedorVideosLecturas">
-                                    <iframe style="width:100%;" height="722" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                    <iframe style="width:100%;" height="722" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen data-toggle="tooltip" data-placement="right" title="Fazt
+.(2018).Git y GitHub. Recuperado de: https://youtu.be/HiXLkL42tMU"></iframe>
                             </div>
                             
                         </div>
