--- a/GITPages.html
+++ b/GITPages.html
@@ -145,7 +145,8 @@
                                 </button>
                             </div>
                             <div class="col-lg-12 contenedorVideosLecturas">
-                                    <iframe style="width:100%;" height="722" src="https://www.youtube.com/embed/QaxgF4v4hms" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                                    <iframe style="width:100%;" height="722" src="https://www.youtube.com/embed/QaxgF4v4hms" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen data-toggle="tooltip" data-placement="right" title="Fazt
+                                   .(2018).GitHub Pages. Recuperado de: https://youtu.be/QaxgF4v4hms"></iframe>
                             </div>
                         </div>
                     </div>
