--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             </span>
             To Top
         </a>
-        <img class="LogoFooter" align="left" src="Img/LogoUNAD.png"></img>
+        <img class="LogoFooter" align="left" src="Img/logounad.png"></img>
         <div class="footerRedes">
 
             <h6 class="text-uppercase mb-4 font-weight-bold">
