--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="Js/jquery.js" type="text/javascript"></script>
     <script src="Js/bootstrap.js" type="text/javascript"></script>
     <script src="Js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="Js/FuncionesOVI.js" type="text/javascript"></script>
+    <script src="Js/funcionesovi.js" type="text/javascript"></script>
     <link href="Css/style.css" rel="stylesheet" type="text/css"></link>
     <link href="Css/styleMenu.css" rel="stylesheet" type="text/css"></link>
     <link href="Css/bootstrap.css" rel="stylesheet" type="text/css"></link>
