--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="Css/bootstrap.min.css" rel="stylesheet" type="text/css"></link>
     <link href="Css/font-awesome.css" rel="stylesheet" type="text/css"></link>
     <title> Inicio</title>
-    <link href="img/logo.ico" rel="icon"></link>
+    <link href="Img/logo.ico" rel="icon"></link>
     </meta>
 </head>
 
