Corrección de errores
Se  aplicaron algunas correcciones.

--- a/GITPages.html
+++ b/GITPages.html
@@ -5,7 +5,7 @@
             <script src="Js/jquery.js" type="text/javascript"></script>
             <script src="Js/bootstrap.js" type="text/javascript"></script>
             <script src="Js/bootstrap.min.js" type="text/javascript"></script>
-            <script src="Js/FuncionesOVI.js" type="text/javascript"></script>
+            <script src="Js/funcionesovi.js" type="text/javascript"></script>
             <script src="Js/bootstrap.bundle.js" type="text/javascript"></script>
             <script> 
             $(function (){
@@ -18,7 +18,7 @@
             <link href="Css/bootstrap.min.css" rel="stylesheet" type="text/css"></link>
             <link href="Css/font-awesome.css" rel="stylesheet" type="text/css"></link>
             <title>Lecturas</title>
-            <link href="img/logo.ico" rel="icon"></link>
+            <link href="Img/logo.ico" rel="icon"></link>
         </meta>
     </head>
     <body>
@@ -160,7 +160,7 @@
                 </span>
                 To Top
             </a>
-                <img class="LogoFooter" align="left" src="Img/LogoUNAD.png"></img>
+                <img class="LogoFooter" align="left" src="Img/logounad.png"></img>
                 <div class="footerRedes">
                     <h6 class="text-uppercase mb-4 font-weight-bold">
                         Redes
