--- a/ActividadesGit.html
+++ b/ActividadesGit.html
@@ -6,14 +6,14 @@
     <script src="Js/jquery.js" type="text/javascript"></script>
     <script src="Js/bootstrap.js" type="text/javascript"></script>
     <script src="Js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="Js/FuncionesOVI.js" type="text/javascript"></script>
+    <script src="Js/funcionesovi.js" type="text/javascript"></script>
     <link href="Css/style.css" rel="stylesheet" type="text/css"></link>
     <link href="Css/styleMenu.css" rel="stylesheet" type="text/css"></link>
     <link href="Css/bootstrap.css" rel="stylesheet" type="text/css"></link>
     <link href="Css/bootstrap.min.css" rel="stylesheet" type="text/css"></link>
     <link href="Css/font-awesome.css" rel="stylesheet" type="text/css"></link>
     <title> Actividades </title>
-    <link href="img/logo.ico" rel="icon"></link>
+    <link href="Img/logo.ico" rel="icon"></link>
     </meta>
 </head>
 
@@ -250,7 +250,7 @@
             </span>
             To Top
         </a>
-        <img class="LogoFooter" align="left" src="Img/LogoUNAD.png"></img>
+        <img class="LogoFooter" align="left" src="Img/logounad.png"></img>
         <div class="footerRedes">
             <h6 class="text-uppercase mb-4 font-weight-bold">
                 Redes
