--- a/GITPages.html
+++ b/GITPages.html
@@ -132,7 +132,7 @@
                     </div>
                     <div class="col-lg-12 row">
                         <div class="col-lg-3 contenedorIMG">
-                            <img alt="Responsive image" data-target="#ModalGitPages" src="Img/ColorGitpages.png" data-toggle="tooltip" data-placement="Top" title="GitHub.(2018). GitHub Logos y Uso. Recuperado de: https://github.com/logos">
+                            <img alt="Responsive image" data-target="#ModalGitPages" src="Img/Colorpages.png" data-toggle="tooltip" data-placement="Top" title="GitHub.(2018). GitHub Logos y Uso. Recuperado de: https://github.com/logos">
                             </img>
                         </div>
                         <div class="col-lg-9">
