Arreglo de la imagen de github pages
Se arreglo la imagen de github pages en el index

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     
                                  <div class="TexconInf">
                                         <a href="GITPages.html"><div class="col-lg-3 ContenedorIco">
-                                     <img alt="Responsive image" data-target="#ModalGitHub" data-toggle="modal" src="Img/ColorGitPages.png">
+                                     <img alt="Responsive image" data-target="#ModalGitHub" data-toggle="modal" src="Img/Colorpages.png">
                                      </img></a>
                                      </div>
                                  </div>
