Ajustes en el audio
Se realizaron ajustes en el audio presentado en la multimedia

--- a/Multimedia.html
+++ b/Multimedia.html
@@ -197,7 +197,7 @@
                         </div>
                     </div>
                     <div class="col-lg-12">
-                        <audio alt="Third slide" autoplay="" class="d-block w-100" controls="" loop="" src="Audios/GrabacionAudioTemas.m4a">
+                        <audio alt="Third slide" class="d-block w-100" controls="" src="Audios/GrabacionAudioTemas.m4a">
                         </audio>
                     </div>
 
