--- a/Autores.html
+++ b/Autores.html
@@ -206,7 +206,7 @@
                                 <b>
                                     Correo Electronico:
                                 </b>
-                                esneider@gmail.com
+                                esneider262@gmail.com
                             </p>
                             <p>
                                 <b>
