--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         <p>
                             En el desarrollo de esta actividad se conoce mas afondo el funcionamiento de GitHub, GitHubPages, Css, HTML y otras implementaciones
                             adicionales que se hicieron en esta pagina, esta cuenta con secciones de Slider(Carrucel) para
-                            la visualizzción de los videos.
+                            la visualización de los videos.
                         </p>
                     </div>
                 </div>
