--- a/Autores.html
+++ b/Autores.html
@@ -172,10 +172,8 @@
                             Visitas
                         </h2>
                         </div></center>
-                        <a href="http://www.reliablecounter.com" target="_blank">
-                            <img src="https://www.reliablecounter.com/count.php?page=44593213&digit=style/plain/1/&reloads=0">
-                        </a>
-                    </div>
+                        <a href="http://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=https://harold0904731.github.io/FaseDisenoOVI_WEB/index.html&digit=style/plain/1/&reloads=0" alt="hit counters for websites" title="hit counters for websites" border="0"></a><br /><a href="http://www.reliablecounter.com" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;">hit counters for websites</a>
+                        </div>
                 </div>
                 <div class="col-lg-12 row">
                     <div class="col-lg-8 row ContenedorDatos">
