--- a/Autores.html
+++ b/Autores.html
@@ -172,7 +172,7 @@
                             Visitas
                         </h2>
                         </div></center>
-                        <a href="http://www.reliablecounter.com" target="_blank"><img src="https://www.reliablecounter.com/count.php?page=https://harold0904731.github.io/FaseDisenoOVI_WEB/index.html&digit=style/plain/1/&reloads=0" alt="hit counters for websites" title="hit counters for websites" border="0"></a><br /><a href="http://www.reliablecounter.com" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;">hit counters for websites</a>
+                             <center><a href="https://www.cerotec.net/estadisticas-122655/harold0904731.github.io" title="estadisticas del contador de visitas"><img src="https://www.cerotec.net/contador.php?t=5&s=9&i=122655" alt="www.cerotec.net"></a> <br><a href='http://www.diario-abc.com/' style='font-size:12px;' >Diario ABC</a></center>
                         </div>
                 </div>
                 <div class="col-lg-12 row">
