--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                 </div> 
                              
                                 <div class="TexconInf">
-                                     <a href="GitHub.html"><div class="col-lg-3 ContenedorIco">
+                                     <a href="GITHUB.html"><div class="col-lg-3 ContenedorIco">
                                      <img alt="Responsive image" data-target="#ModalGitHub" data-toggle="modal" src="Img/ColorGitHub.png">
                                      </img></a>
                                      </div>
